--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,8 @@ const users = await fetch('http://localhost:5521/api/db/users')
   });
 ---
 
-<Layout title="world">
+<Layout title="Astro">
+	
 	<h1>Astro hi</h1>
 	<ul>
 		{users && users.length > 0 ? (
