--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,27 +1,8 @@
 ---
 import Layout from '../layout/layout.astro';
-import * as Query from '../api/database/user';
 
-const users = await fetch('http://localhost:5521/api/db/users')
-  .then(res => res.json())
-  .catch(err => {
-    console.error('Error fetching users:', err);
-    return [];
-  });
 ---
 
 <Layout title="Astro">
-	
-	<h1>Astro hi</h1>
-	<ul>
-		{users && users.length > 0 ? (
-			users.map((user: Query.USER) => (
-				<li>
-				{user.name} - {user.email} - {user.isAdmin ? 'Admin' : 'User'}
-				</li>
-			))
-			) : (
-			<p>No users found</p>
-			)}
-	</ul>
+	<h1 class="text-xl">Astro hi</h1>
 </Layout>
