--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -5,6 +5,11 @@ import Link from '../components/navlink.astro'
 import { isLoggedIn } from '../util/auth';
 import { Logoutform } from '../components/react/logoutform';
 import AdminDashboard from '../components/react/admindash';
+
+//just so you the page doesn't get cached so you can't go back to it without re logging in
+Astro.response.headers.set('Cache-Control', 'no-store, no-cache, must-revalidate, proxy-revalidate');
+Astro.response.headers.set('Pragma', 'no-cache');
+Astro.response.headers.set('Expires', '0');
     
 const { success, data, user } = await isLoggedIn(Astro.request);
 
