--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,5 @@ import Layout from '../layout/layout.astro';
 
 <Layout title="Astro">
 	<h1 class="text-xl">Astro hi</h1>
+	<a href="/api/logout">logout!</a>
 </Layout>
