--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -2,62 +2,13 @@
 import Layout from "../layout/layout.astro";
 import { Button } from "../components/react/button";
 import { LoginForm } from "../components/react/loginform";
-
-// if (Astro.request.method === "POST") {
-//     try 
-//     {
-//       const data = await Astro.request.formData();
-//       const email = data.get("email");
-//       const password = data.get("password");
-
-//       const response = await fetch('http://localhost:5521/api/login', {
-//       method: 'POST',
-//       headers: {
-//         'Content-Type': 'application/json',
-//       },
-//       credentials: 'include', 
-//       body: JSON.stringify ({
-//         email,
-//         password
-//       })
-//       });
-//       const result = await response.json();
-
-//       console.log( result );
-//       if (result.success) 
-//         Astro.redirect( "/index" ); 
-
-//     } 
-//     catch (error) 
-//     {
-//       if (error instanceof Error) 
-//         console.error(error.message);
-//     }
-//   }
 ---
 
 <Layout title="Astro | Login">
-    <div class="form-container flex justify-center items-center min-h-full min-w-full absolute top-0">
-        <div class="flex justify-center items-center flex-col max-w-[500px] w-full p-5 bg-white shadow-lg rounded-lg">
-            <h1 class="text-2xl font-bold mb-5">Login</h1>
+    <div class="center-screen">
+        <div class="auth-form-wrap">
+            <h1 class="text-2xl font-bold">Login</h1>
             <LoginForm client:load />
-            <!-- <form method="POST" class="w-full">
-                <label class="block mb-3" class="block mb-3">
-                    Email
-                    <input type="email" name="email" required class='border-2 border-slate-400 p-2 rounded-lg w-full' />
-                </label>
-                <label class="block mb-3">
-                    Password
-                    <input type="password" name="password" required minlength="3" class='border-2 border-slate-400 p-2 rounded-lg w-full'/>
-                </label>
-                <p class='my-5 text-right'>
-                    Do have an account?{' '}
-                    <a href='/register' class='text-blue-500 underline'>
-                      Register
-                    </a>
-                </p>
-                <Button>Login</Button>
-            </form> -->
         </div>
     </div>
 </Layout>
