--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,7 +2,10 @@ body
 {
     padding: 0;
     margin: 0;
-    min-height: 100vh;
+    height: 100%;
+    min-height: 100%;
+    word-wrap: break-word;
+    word-break: break-word;
     overflow: none !important;
 }   
 
@@ -51,18 +54,76 @@ body
     border-radius: 0.5rem;
 }
 
-.auth-form label 
-{
-    display: block;
-    margin-bottom: 0.8rem;
-}
 
 .auth-form input
 {
-    border-width: 2px;
-    --tw-border-opacity: 1;
-    border-color: rgb(148 163 184 / var(--tw-border-opacity)) /* #94a3b8 */;
-    padding: 0.5rem;
-    border-radius: 0.3rem;
+    display: block;
     width: 100%;
+    background-color: transparent;
+    padding: 0;
+    padding-top: 0.625rem /* 10px */;
+    padding-bottom: 0.625rem /* 10px */;
+    font-size: 1.3rem;
+    line-height: 1rem;
+    appearance: none;
+    outline: none;
+    outline-offset: none;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+    border: none;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    --tw-border-opacity: 1;
+    border-color: rgb(180 180 180 / var(--tw-border-opacity));
+    color: rgb(100 100 100 / var(--tw-border-opacity));
+    transition: all 100ms;
+}
+
+.auth-form input:focus
+{
+    --tw-border-opacity: 1;
+    border-color: rgb(147 51 234 / var(--tw-border-opacity)) /* #9333ea */;
+
+    --tw-text-opacity: 1;
+    color: rgb(147 51 234 / var(--tw-text-opacity)) /* #9333ea */;
+}
+
+.auth-form label 
+{
+    display: block;
+    position: absolute;
+    --tw-translate-y: -1.5rem /* -24px */;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity)) /* #6b7280 */;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    --tw-translate-y: -1.6rem /* -24px */;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    --tw-scale-x: .75;
+    --tw-scale-y: .75;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    top: 0.5rem /* 4px */;
+    font-size: 1.25rem /* 20px */;
+    line-height: 1.75rem /* 28px */;
+    transform-origin: 0;
+    transition-duration: 100ms;
+}
+
+.auth-form input:focus ~ label
+{
+    --tw-text-opacity: 1;
+    color: rgb(147 51 234 / var(--tw-text-opacity)) /* #9333ea */;
+    left: 0px;
+    --tw-text-opacity: 1;
+    color: rgb(147 51 234 / var(--tw-text-opacity)) /* #9333ea */;
+}
+
+.auth-form input:placeholder-shown ~ label
+{
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    --tw-translate-y: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
