--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,14 @@
+html
+{
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    min-height: 100%;
+    word-wrap: break-word;
+    word-break: break-word;
+    overflow: none !important;
+}
+
 body
 {
     padding: 0;
