--- a/src/pages/admin/products/categories.astro
+++ b/src/pages/admin/products/categories.astro
@@ -1,12 +1,9 @@
 ---
-import Layout from '../../../layout/layout.astro';
-import Adminheader from '../../../layout/admin.astro';
+import AdminLayout from '../../../layout/admin.astro';
 ---
 
-<Layout title="Astro | Account" empty={true} /> 
-    <Adminheader>
-        <div class="w-full main">
-            Edit Categories
-        </div>
-    </Adminheader>
-</Layout>   
+<AdminLayout>
+    <div class="w-full main">
+        Edit Categories
+    </div>
+</AdminLayout>
