--- a/src/pages/admin/products/create.astro
+++ b/src/pages/admin/products/create.astro
@@ -1,13 +1,11 @@
 ---
 import Layout from '../../../layout/layout.astro';
-import Adminheader from '../../../layout/admin.astro';
+import AdminLayout from '../../../layout/admin.astro';
 
 ---
 
-<Layout title="Astro | Account" empty={true} /> 
-        <Adminheader>
-            <div class="w-full main">
-                Create products
-            </div>
-        </Adminheader>
-</Layout>
+<AdminLayout>
+    <div class="w-full main">
+        Create products
+    </div>
+</AdminLayout>
