--- a/src/pages/admin/users.astro
+++ b/src/pages/admin/users.astro
@@ -1,14 +1,10 @@
 ---
-import Layout from '../../layout/layout.astro';
 import { Logoutform } from '../../components/react/logoutform';
-import Adminheader from '../../layout/admin.astro';
-
+import AdminLayout from '../../layout/admin.astro';
 ---
 
-<Layout title="Astro | Account" empty={true} /> 
-        <Adminheader>
-            <div class="w-full main">
-                <Logoutform client:load/>
-            </div>
-        </Adminheader>
-</Layout>
+<AdminLayout>
+    <div class="w-full main">
+        <Logoutform client:load/>
+    </div>
+</AdminLayout>
