--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -5,10 +5,14 @@ import { RegisterForm } from "../components/react/registerform";
 
 
 <Layout title="Astro | Register">
-    <div class="center-screen">
-        <div class="auth-form-wrap">
-            <h1 class="text-2xl font-bold">Register</h1>
-            <RegisterForm client:load /> 
+    <main class="max-h-full h-full min-w-[220px] w-auto my-[48px]">
+        <div class="max-w-[640px] m-auto rounded-[26px] border-gray-200 border-2 bg-gray-50 p-[72px]">
+            <div class="text-center">
+                <h1 class="text-3xl font-semibold">Sign in to get started</h1>
+            </div>
+            <div class="content">
+                <RegisterForm client:load />
+            </div>
         </div>
-    </div>
+    </main>
 </Layout>
